test_datasets/generated/syntax_errors/error_5_expected.py
def compare(a, b):
    if a >= b:
        return True
    return False
